build(feeds): update post model, implemented post service, prepared post repository integration